@@ -1,3 +1,12 @@
+2026-02-17T01:07:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22082386917 # 880
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-17
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 695 1089 / 700 1094
+* notice: next accum: outdated-unq outdated-all / unq all: 695 1089 / 697 1091
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-16T01:08:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22046723812 # 879
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-16
